--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -7,7 +7,7 @@
 }
 
 .cart img {
-    height: 4rem;
+    height: 6rem;
 }
 
 <!-- header.header .navbar nav ul.mobile li a {
@@ -143,11 +143,10 @@
 
 .bebe {
     color: #2e5b83;
-    font-family: Dancing Script;
-    font-weight: bolder;
+    font-family: AMTW;
     font-size: 5rem;
     display: block;
-    text-shadow: gray 1px 3px 2px;
+    text-shadow: white 2px 2px 3px;
     top: -19px;
     position: relative;
     text-decoration: none;
@@ -215,6 +214,7 @@ li:hover {
     position: absolute;
     left: 5px;
     top: -168px;
+    font-family: Artika;
 }
 
 #menuline {
