--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 @font-face {
+    font-family: AMTW;
+    src: url(assets/fonts/AMTW-1.otf) format("opentype");
+}
+
+@font-face {
     font-family: Indie Flower;
     src: url(assets/fonts/IndieFlower-Regular.ttf) format("opentype");
 }
