--- a/src/app/pages/checkout/checkout.component.css
+++ b/src/app/pages/checkout/checkout.component.css
@@ -372,8 +372,8 @@ body {
     position: absolute;
     top: 50%;
     width: 50%;
-    height: 3px;
-    margin-top: -1px;
+    height: 1vh;
+    margin-top: -.5vh;
     background-color: #e1e7ec;
     content: '';
     z-index: 1
@@ -395,7 +395,7 @@ body {
     border: 1px solid #e1e7ec;
     border-radius: 50%;
     background-color: #f5f5f5;
-    color: #374250;
+    color: #8badd6;
     font-size: 38px;
     line-height: 81px;
     z-index: 5
@@ -404,10 +404,17 @@ body {
 .steps .step .step-title {
     margin-top: 16px;
     margin-bottom: 0;
-    color: #606975;
+    color: #8badd6;
     font-size: 14px;
     font-weight: 500;
     overflow-x: hidden;
+}
+
+.steps .step.actived .step-title {
+    font-weight: 800;
+    font-size: 18px;
+    position: relative;
+    top: -5px
 }
 
 .steps .step:first-child .step-icon-wrap::before {
@@ -420,12 +427,12 @@ body {
 
 .steps .step.completed .step-icon-wrap::before,
 .steps .step.completed .step-icon-wrap::after {
-    background-color: #0da9ef
+    background-color: #8badd6
 }
 
 .steps .step.completed .step-icon {
-    border-color: #0da9ef;
-    background-color: #0da9ef;
+    border-color: #8badd6;
+    background-color: #8badd6;
     color: #fff
 }
 
@@ -965,6 +972,27 @@ body {
     }
     .pr-1vw {
         padding-right: 1vw;
+    }
+    .steps .step .step-icon-wrap::before,
+    .steps .step .step-icon-wrap::after {
+        display: block;
+        position: absolute;
+        top: 50%;
+        width: 50%;
+        height: 1vh;
+        margin-top: -.5vh;
+        background-color: #e1e7ec;
+        content: '';
+        z-index: 1
+    }
+    .steps .step .step-icon-wrap::before {
+        left: 0
+    }
+    .steps .step .step-icon-wrap::after {
+        right: 0
+    }
+    .steps {
+        zoom: .7;
     }
 }
 
