--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -45,19 +45,19 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="steps d-flex flex-sm-nowrap justify-content-between padding-top-2x padding-bottom-1x">
-                        <div class="step" [ngClass]="{completed: step>-1}">
+                        <div class="step" [ngClass]="{completed: step>-1, actived: step==0}">
                             <div class="step-icon-wrap">
                                 <div class="step-icon"><i class="fas fa-clipboard-check"></i></div>
                             </div>
                             <h4 class="step-title">Resumo</h4>
                         </div>
-                        <div class="step" [ngClass]="{completed: step>0}">
+                        <div class="step" [ngClass]="{completed: step>0,actived: step==1}">
                             <div class="step-icon-wrap">
                                 <div class="step-icon"><i class="fas fa-money-check-alt"></i></div>
                             </div>
                             <h4 class="step-title">Dados do Pagamento</h4>
                         </div>
-                        <div class="step" [ngClass]="{completed: step>1}">
+                        <div class="step" [ngClass]="{completed: step>1, actived: step==2}">
                             <div class="step-icon-wrap">
                                 <div class="step-icon"><i class="fas fa-check"></i></div>
                             </div>
@@ -69,26 +69,31 @@
             </div>
             <div id="my-modal-description">
                 <div *ngIf="this.step==0" class="container">
-                    <ul class="list-group list-group-flush">
-                        <li *ngFor="let item of this.cart; index" class="list-group-item">{{item.product}} ({{item.qtd}}) R$ {{item.value}}</li>
-                    </ul>
-                    <div class="row m-0 p-0">
-                        <div class="col">
-                            <div class="action-btn">
-                                <button class="btn btn-success btn-lg" (click)="modalRef.hide()">
-                                    Voltar
-                                    <i class="fa fa-chevron-right"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="action-btn">
-                                <button class="btn btn-success btn-lg" (click)="this.sobeStep()">
-                                    Proximo
-                                    <i class="fa fa-chevron-right"></i>
-                                </button>
-                            </div>
-                        </div>
+                    <table class="table table-striped defaultColor">
+                        <thead>
+                            <tr>
+                                <th scope="col">Produto</th>
+                                <th scope="col">Quantidade</th>
+                                <th scope="col">Total(R$)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of this.cart">
+                                <th scope="row">{{item.product}}</th>
+                                <td>{{ item.qtd | number }}</td>
+                                <td>{{ item.value | number }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="row m-0 p-0 form-inline">
+                        <button class="btn btn-success col mr-3" (click)="modalRef.hide()">
+                            <i class="fa fa-chevron-left"></i>
+                            Voltar
+                        </button>
+                        <button class="btn btn-success col" (click)="this.sobeStep()">
+                            Proximo
+                            <i class="fa fa-chevron-right"></i>
+                        </button>
                     </div>
                 </div>
                 <div *ngIf="this.step==1" class="container">
