--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
+.defaultColor {
+    color: #8badd6;
+}
+
+.defaultBgColor {
+    background-color: #8badd6;
+}
+
 @font-face {
     font-family: AMTW;
     src: url(assets/fonts/AMTW-1.otf) format("opentype");
@@ -824,9 +832,9 @@ content.home {}
     border: 0;
     color: rgb(255, 255, 255);
     padding: 15px 35px;
-    font-family: 'OPS'!important;
+    font-family: 'Verdana'!important;
     font-size: 22px!important;
-    text-transform: lowercase;
+    /*text-transform: lowercase;*/
 }
 
 
