--- a/src/app/pages/mural/mural.component.html
+++ b/src/app/pages/mural/mural.component.html
@@ -3,6 +3,7 @@
     <h5 class="text-uppercase">Deixe sua mensagem para o Martim</h5>
     <p class="m-0 p-0">É possível deixar mensagem privada. As mensagem serão censuradas e não devem conter teor político
       ...</p>
+      <button type="button" class="btn btn-primary">Enviar Mensagem</button>
   </div>
   <ul class="hash-list cols-3 cols-1-xs pad-30-all align-center text-sm">
     <li *ngFor="let mural of listMural">
@@ -12,7 +13,6 @@
       </div>
       <p class="fs-110 font-cond-l" contenteditable="false">" {{mural.nota}} "</p>
       <h5 class="font-cond mgb-5 fg-text-d fs-130" contenteditable="false"> {{mural.nome}}</h5>
-      <!-- <small class="font-cond case-u lts-sm fs-80 fg-text-l" contenteditable="false">Business Woman - New York</small> -->
     </li>
     <li>
       <div class="d-flex justify-content-center mb-3">
