--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -45,13 +45,13 @@
                         <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/gallery">Imagens</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/event">Chá de bebê</a>
+                        <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/event">Chá de Fralda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/mural">Mural</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/checkout">Fralda</a>
+                        <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/checkout">Lista de Presentes</a>
                     </li>
                 </ul>
             </div>
